--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "date-fns": "^2.29.3",
+    "form-data": "^4.0.0",
     "gray-matter": "^4.0.3",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.2",
     "next": "latest",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
