--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "body-parser": "^1.20.2",
     "date-fns": "^2.29.3",
     "form-data": "^4.0.0",
