--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.2",
     "date-fns": "^2.29.3",
     "form-data": "^4.0.0",
     "gray-matter": "^4.0.3",
@@ -16,6 +17,7 @@
     "next": "latest",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2"
