--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.7.1",
     "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "vercel": "^33.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
