--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,12 @@
 {
   "site": {
-    "title": "bestoblog",
-    "base_url": "/",
+    "title": "Bestoblog",
+    "base_url": "https://bestoblog.vercel.app",
     "favicon": "/images/favicon.svg",
     "logo": "/images/logo.png",
     "logo_width": "55",
     "logo_height": "45",
-    "logo_text": "Besto"
+    "logo_text": "Bestoblog"
   },
 
   "settings": {
@@ -24,6 +24,6 @@
   "metadata": {
     "meta_author": "Bestoblog",
     "meta_image": "/images/og-image.png",
-    "meta_description": "bestoblog"
+    "meta_description": "bestoblog personal blog for informations"
   }
 }
